started maddi-run-scanbuild